--- a/Lívia/estilos/style.css
+++ b/Lívia/estilos/style.css
@@ -18,7 +18,7 @@ html, body {
     background-size: cover;
     background-repeat: no-repeat;
     background-color: var(--cor3);
-    width: 100vw;
+    width: 97vw;
     height: 100vh;
     background-position: center center;
     position: relative;
@@ -29,12 +29,14 @@ div {
     text-align: center;
     padding: 20px;
     max-width: 800px;
-    margin: auto;
+    
+    margin: 30px;
     border-radius: 20px;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.726);
     color: var(--cor3);
     text-shadow: 1px 1px 2px black;
 
+    
 
 }
 
@@ -48,4 +50,21 @@ div a {
     padding: 3px;
     margin: 10px;
 
+}
+
+@media screen and (min-width: 768px) {
+
+    html, body {
+        position: relative;
+    }
+
+    div {
+     margin: auto;
+     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70vw;
+    height: 30vh;
+}
 }
