--- a/Lívia/estilos/pag2.css
+++ b/Lívia/estilos/pag2.css
@@ -18,12 +18,35 @@ body {
     background-color: var(--cor4);
 }
 
+header {
+background-color: var(--cor4);
+text-align: center;
+padding: 10px;
+background-image: linear-gradient( to top, #d15a78, #a142a1);
+box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.568);
+color: #F1DFDF;
+text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.658);
+}
+
+
+header span {
+    margin: 20px 40px 5px 40px;
+    color: #F1DFDF;
+    padding: 2px;
+    border: 2px solid #F1DFDF;
+    border-radius: 4px;
+}
+
+header > span > abbr {
+    text-decoration: none;
+    border-bottom: none;
+}
+
 div {
     background-color: #f1dfdfb6;
     width: 75vw;
-    
     margin: auto;
-    margin-top: 25vh;
+    margin-top: 20px;
     padding: 20px;
     border-radius: 20px;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.685);
@@ -42,11 +65,11 @@ div h1 {
 div p {
     text-align: justify;
     color: black;
-    font-size: 0.9em;
+    font-size: 0.8em;
     padding-bottom: 10px;
 }
 
-a {
+#a1 {
     background-color: #fc7f9e;
     color: var(--cor3);
     text-decoration: none;
@@ -70,6 +93,16 @@ html, body {
 
 @media screen and (min-width: 768px) {
     div p {
-        font-size: 1.3em;
+        font-size: 1em;
     }
+
+    div {
+        margin-bottom: 20px;
+    }
+
+    html, body {
+        width: 98vw;
+    }
+
+
 }
