--- a/Portfólio/style.css
+++ b/Portfólio/style.css
@@ -55,7 +55,7 @@ div.introducao img {
 
 div.introducao h1 {
     margin: 15px;
-    text-align: center;
+    text-align: left;
     color: var(--cor-azul);
 }
 
@@ -64,4 +64,126 @@ div.introducao > a {
     margin-top: 50px;
     color: var(--cor-azul);
     
+}
+
+div.apresentacao {
+    background-color: rgb(255, 255, 255);
+    width: 90vw;
+    height: auto;
+    margin: auto;
+    margin-top: 30px;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+div.apresentacao iframe {
+    max-width: 900px;
+    margin: auto;
+    height: 500px;
+    border-radius: 15px;
+    
+}
+
+div.apresentacao h1 {
+    margin: 15px;
+    text-align: left;
+    color: var(--cor-azul);
+}
+
+div.skills {
+    background-color: rgb(255, 255, 255);
+    width: 90vw;
+    height: auto;
+    margin: auto;
+    margin-top: 30px;
+    padding: 30px;
+}
+
+div.lista {
+   display: flex;
+   flex-direction: row column;
+   justify-content: space-between;
+   
+}
+
+div.skills h2 {
+    margin: 10px 0px 25px 0px;
+    color: var(--cor-azul);
+}
+
+div.skills p {
+    color: var(--cor-azul);
+    font-weight: bold;
+}
+
+div.barra {
+    background-color: lightgray;
+    height: 10px;
+    border-radius: 25px;
+    width: 100%;
+}
+
+div.progresso {
+    background-color: rgb(90, 175, 255);
+    height: 10px;
+    width: 80vw;
+    border-radius: 25px;
+}
+
+div.teste {
+    background-color: white;
+    height: 10px;
+    width: 80vw;
+    border-radius: 25px;
+}
+
+div.barra {
+    background-color: lightgray;
+    height: 10px;
+    border-radius: 25px;
+    width: 100%;
+}
+
+div.progressocss {
+    background-color: rgb(90, 175, 255);
+    height: 10px;
+    width: 80vw;
+    border-radius: 25px;
+}
+
+div.progressojs {
+    background-color: rgb(90, 175, 255);
+    height: 10px;
+    width: 80vw;
+    border-radius: 25px;
+}
+
+div.progressocm {
+    background-color: rgb(90, 175, 255);
+    height: 10px;
+    width: 80vw;
+    border-radius: 25px;
+}
+
+div.progressote {
+    background-color: rgb(90, 175, 255);
+    height: 10px;
+    width: 80vw;
+    border-radius: 25px;
+}
+
+div.progressoap {
+    background-color: rgb(90, 175, 255);
+    height: 10px;
+    width: 80vw;
+    border-radius: 25px;
+}
+
+div.progressol {
+    background-color: rgb(90, 175, 255);
+    height: 10px;
+    width: 80vw;
+    border-radius: 25px;
 }
