--- a/Portfólio/style.css
+++ b/Portfólio/style.css
@@ -40,7 +40,7 @@ div.introducao {
     padding: 30px;
 }
 
-div.foto {
+div.foto1 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -254,83 +254,61 @@ div.form2:hover {
 
 /*PROJETOS*/
 
-div.projetos {
-    background-color: white;
+.projetos {
+    background-color: rgb(255, 255, 255);
     width: 90vw;
     height: auto;
     margin: auto;
-    margin-top: 30px;
+    margin-top: 20px;
     padding: 30px;
 }
 
-div.projetos h1 {
-    color: var(--cor-azul);   
-    margin: 15px;
-}
-
-div.flex {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 600px;
-    flex-direction: column;
-}
-
-div.projetos .container {
-    border-left: 7px solid var(--cor-azul);
+.container {
+    padding: 15px;
     border-radius: 10px;
-    width: 95%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     background-color: var(--cor-de-fundo);
-    padding-bottom: 15px;
+    border-left: 7px solid var(--cor-azul);
+    margin-bottom: 20px;
 }
 
-div.projetos .container:hover {
-    border-left: 15px solid var(--cor-azul);
-    transition: .5s;
-    cursor: pointer;
+.container:hover {
+      border-left: 15px solid var(--cor-azul);
+      transition: .4s;
+      cursor: pointer;
 }
 
-div.projetos .foto {
-    width: 90%;
-    align-items: center;
-    height: 500px;
-    border-radius: 10px;
-    margin-left: 20px;
-    aspect-ratio: 16/9;
-    object-fit: cover;
-    overflow: hidden;
-    border-radius: 8px;
-}
-
-div.info {
+.imagens {
     display: flex;
     flex-direction: column;
-    align-items: start;
-    margin-left: 20px;
+    gap: 15px;
+    border-radius: 10px;
 }
 
-.info h3 {
-    margin: 10px 0px;
+.titulo {
+    margin: 8px 0px;
 }
 
-.info summary {
-    margin-top: 10px;
-    margin-bottom: 10px;
+summary {
+margin: 8px 0px;
 }
 
-@media (min-width: 768px) {
-    div.flex {
-        flex-direction: row;
-        justify-content: end;
-        height: 150px;
+.projetos h1 {
+    color: var(--cor-azul);
+    margin-bottom: 8px;
+}
+
+@media screen and (min-width: 768px) {
+
+    .container {
+        flex-direction: row-reverse;
+        justify-content: space-between;
     }
 
-    .foto {
-        max-width: 220px;
-        height: 100px;
+    .imagens {
+        width: 50%;
     }
 
-    .info {
-        
-    }
 }
