--- a/Portfólio/style.css
+++ b/Portfólio/style.css
@@ -7,6 +7,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 :root {
     --cor-azul: rgb(0, 132, 255);
     --cor-de-fundo:  rgb(233, 233, 233);
@@ -21,12 +25,16 @@ header {
     height: 70px;
     display: flex;
     justify-content: end;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 header > a {
     color: white;
     text-decoration: none;
     margin: 0px 10px;
+    padding: 10px;
 }
 
     /*MENU*/
@@ -39,6 +47,15 @@ div.introducao {
     margin-top: 20px;
     padding: 30px;
 }
+
+div.introducao p {
+    margin-bottom: 25px;
+}
+
+div.introducao a {
+   margin-left: 30%;
+}
+
 
 div.foto1 {
     display: flex;
@@ -298,6 +315,21 @@ margin: 8px 0px;
 .projetos h1 {
     color: var(--cor-azul);
     margin-bottom: 8px;
+}
+
+footer {
+    text-align: center;
+    background-color: var(--cor-azul);
+    color: white;
+    padding: 12px;
+    margin-top: 20px;
+}
+
+footer a {
+    text-decoration: none;
+    font-weight: bolder;
+    cursor: pointer;
+    color: white;
 }
 
 @media screen and (min-width: 768px) {
